[package]
name = "pw"
version = "0.1.0"
authors = ["William Wang <defund@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argonautica = "0.2.0"
clipboard = "0.5.0"
dirs = "2.0.2"
rand = "0.7.2"
ring = "0.16.9"
rpassword = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
